fix: action spacing and minor adjustments

--- a/polaris-react/src/components/Listbox/components/Action/Action.module.scss
+++ b/polaris-react/src/components/Listbox/components/Action/Action.module.scss
@@ -9,6 +9,6 @@
   margin-bottom: var(--p-space-100);
 }
 
-.Icon {
-  padding-right: var(--p-space-200);
+[data-allow-multiple='true'] .Icon {
+  padding-right: var(--p-space-050);
 }
